# dotenvx-example

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: secret-key-management.md
scripts/: keychain-setup.sh
src/app/: database.py  github.py  main.py  models.py
static/: search.js  style.css
templates/: base.html  history.html  index.html  profile.html
tests/: test_github.py
